--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ ul.menu li a{
 h1{
     align-items: center;
     text-align: center;
-    color: darkorchid;
+    color: rgb(7, 2, 10);
 }
 
 /* Responsivo*/
