--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ ul.menu{
 }
 
 ul.menu li a{
-    color: rgba(255, 238, 0, 0.925);
+    color: rgb(255, 238, 0, 0.925);
     text-decoration: none;
 }
 
