--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ section {
 .estrofe p {
     font-style: italic;
     color: #444;
-    background-color: #ffebcd;
+    background-color: #c9bfee;
     padding: 15px;
     border-left: 4px solid #ff6347;
 }
