--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #fff8dc;
+    background-color: #c78ada;
     margin: 0;
     padding: 0;
     color: #333;
