--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #9f82bb;
+    background-color: #9f82bb81;
     color: white;
     padding: 20px;
     text-align: center;
